# texcreate

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  arm64.dockerfile  build.html  compile.html  index.html  init.html  install_texc.html  new.html  print.html  searchindex.js  searchindex.json  texcreate-complete.bash  texcreate.toml
.chglog/: config.yml
.github/workflows/: pages.yml
Project/: Project.tex  compiler.toml
Project/include/: structure.tex
docs/: book.toml
docs/src/: SUMMARY.md  build.md  compile.md  index.md  init.md  install_texc.md  new.md  new_custom.md  save_custom.md  zip.md
name/: name.tex
src/: auto_complete.rs  config.rs  dir.rs  error.rs  main.rs  repo.rs  texc_gen.rs  web.rs
src/web/: index.rs
