[package]
name = "texcreate"
description = "A LaTeX Project Creator by Mustafif Khan"
version = "3.0.0-beta.9"
edition = "2021"
authors = ["Mustafif Khan"]
license = "MIT"
homepage = "https://texcreate.mkproj.com"
repository = "https://github.com/MKProj/texcreate"
documentation = "https://mkproj.github.io/texcreate/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
reqwest = "0.11.14"
structopt = "0.3.26"
texcore = { version = "0.6.0", features = ["texcreate_template", "async"] }
texcreate_repo = "0.1.2"
tokio = { version = "1.25.0", features = ["full"] }
thiserror = "1.0.38"
toml = "0.7.2"
serde = { version = "1.0.152", features = ["derive"] }
termcolor = "1.2.0"
walkdir = "2.3.2"
zip = "0.6.4"
git2 = "0.16.1"
open = "3.2.0"
rocket = "0.5.0-rc.2"
lazy_static = "1.4.0"
texc_v3_compiler_conf = "0.1.0"
texc_v3_web = "0.1.0"
