[package]
name = "texcreate"
description = "A LaTeX Project Creator by Mustafif Khan"
version = "3.2.0"
edition = "2021"
authors = ["Mustafif Khan"]
license = "MIT"
homepage = "https://texcreate.mkproj.com"
repository = "https://github.com/MKProj/texcreate"
documentation = "https://mkproj.github.io/texcreate/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
reqwest = "0.11.18"
structopt = "0.3.26"
texcore = { version = "0.7.2", features = ["texcreate_template", "async"] }
texcreate_repo = "0.2"
tokio = { version = "1.28.1", features = ["full"] }
thiserror = "1.0.40"
toml = "0.7.4"
serde = { version = "1.0.163", features = ["derive"] }
termcolor = "1.2.0"
walkdir = "2.3.3"
zip = "0.6.6"
git2 = "0.17.1"
open = "4.1.0"
rocket = "0.5.0-rc.3"
lazy_static = "1.4.0"
texc_v3_compiler_conf = "0.1.0"
texc_v3_web = "0.1.2"
indicatif = "0.17.5"

[package.metadata.deb]
maintainer = "Mustafif Khan <mustafif.khan@mkproj.com>"
copyright = "2023 MKProjects <mustafif.khan@mkproj.com>"
license-file = ["LICENSE"]
extended-description = """
A LaTeX Project Creator that utilizes prebuilt templates to ease development with LaTeX
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/texcreate", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/texcreate/README", "644"],
]
